docs: updates docs for stately-arrow, stately-files, arrow, and files
